--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -96,4 +96,8 @@
     <color name="primary">#2196F3</color>
     <color name="primary_dark">#1E88E5</color>
     <color name="accent">@color/primary</color>
+
+
+    <color name="type_n">#aaaaae</color>
+    <color name="type_c">#40caff</color>
 </resources>
