--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -5,7 +5,7 @@
               android:layout_height="200dp">
 <ImageView
     android:id="@+id/iv_headerpic"
-    android:src="@mipmap/bidiu"
+    android:src="@mipmap/google"
     android:scaleType="centerCrop"
     android:layout_width="match_parent"
     android:layout_height="200dp"/>
