--- a/app/src/main/res/layout/activity_introduce.xml
+++ b/app/src/main/res/layout/activity_introduce.xml
@@ -17,7 +17,11 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:visibility="gone"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/tv_gotoapp"
+        android:textColor="@color/colorPrimary"
         android:text="进入应用"
         android:padding="20dp"
         android:id="@+id/tv_start"
