--- a/app/src/main/res/layout/activity_bigplayer.xml
+++ b/app/src/main/res/layout/activity_bigplayer.xml
@@ -22,12 +22,14 @@
             android:layout_marginTop="30dp"
             android:textSize="15sp"
             android:text="我们的时光"
+            android:freezesText="true"
             android:id="@+id/tv_bigsongname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
             android:layout_marginTop="10dp"
             android:textSize="15sp"
+            android:freezesText="true"
             android:text="赵雷"
             android:id="@+id/tv_bigartistname"
             android:layout_width="wrap_content"
@@ -41,7 +43,8 @@
             android:layout_height="wrap_content">
             <TextView
                 android:text=""
-                android:id="@+id/tv_currentdur"
+                android:freezesText="true"
+                android:id="@+id/tv_big_currentdur"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <SeekBar
@@ -54,6 +57,7 @@
                 android:layout_height="wrap_content"/>
             <TextView
                 android:text=""
+                android:freezesText="true"
                 android:id="@+id/tv_totaldur"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -65,6 +69,7 @@
             android:layout_height="match_parent">
             <TextView
                 android:id="@+id/tv_bigpre"
+                android:freezesText="true"
                 android:background="@mipmap/ic_skip_previous_black_36dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -72,11 +77,13 @@
                 android:layout_marginLeft="60dp"
                 android:layout_marginRight="60dp"
                 android:id="@+id/tv_bigpause"
+                android:freezesText="true"
                 android:background="@mipmap/ic_pause_black_36dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/tv_bignext"
+                android:freezesText="true"
                 android:background="@mipmap/ic_skip_next_black_36dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
